--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/3.7" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/3.7 http://maven.apache.org/maven-v3_7.xsd">
+<project xmlns="http://maven.apache.org/POM/3.7.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/3.7.0 http://maven.apache.org/maven-v3_7_0.xsd">
 
   <!-- Build does not work on Java 9 or later as Java 5 is not a valid target -->
 
-  <modelVersion>3.7</modelVersion>
+  <modelVersion>3.7.0</modelVersion>
   <groupId>joda-time</groupId>
   <artifactId>joda-time</artifactId>
   <packaging>jar</packaging>
